--- a/rancid/bin/panlogin.in
+++ b/rancid/bin/panlogin.in
@@ -1,43 +1,61 @@
-#! /usr/bin/expect --
+#! @EXPECT_PATH@ --
 ##
-## $Id: panlogin 2012-08-10 - doug
+## $Id: jlogin.in 2936 2014-11-25 22:52:58Z heas $
 ##
-## rancid 2.3.2a7
-## Copyright (C) 1997-2006 by Terrapin Communications, Inc.
+## @PACKAGE@ @VERSION@
+## Copyright (c) @COPYYEARS@ by Terrapin Communications, Inc.
 ## All rights reserved.
 ##
-## This software may be freely copied, modified and redistributed
-## without fee for non-commerical purposes provided that this license
-## remains intact and unmodified with any RANCID distribution.
+## This code is derived from software contributed to and maintained by
+## Terrapin Communications, Inc. by Henry Kilmer, John Heasley, Andrew Partan,
+## Pete Whiting, Austin Schutz, and Andrew Fort.
 ##
-## There is no warranty or other guarantee of fitness of this software.
-## It is provided solely "as is".  The author(s) disclaim(s) all
-## responsibility and liability with respect to this software's usage
-## or its effect upon hardware, computer systems, other software, or
-## anything else.
+## Redistribution and use in source and binary forms, with or without
+## modification, are permitted provided that the following conditions
+## are met:
+## 1. Redistributions of source code must retain the above copyright
+##    notice, this list of conditions and the following disclaimer.
+## 2. Redistributions in binary form must reproduce the above copyright
+##    notice, this list of conditions and the following disclaimer in the
+##    documentation and/or other materials provided with the distribution.
+## 3. All advertising materials mentioning features or use of this software
+##    must display the following acknowledgement:
+##        This product includes software developed by Terrapin Communications,
+##        Inc. and its contributors for RANCID.
+## 4. Neither the name of Terrapin Communications, Inc. nor the names of its
+##    contributors may be used to endorse or promote products derived from
+##    this software without specific prior written permission.
+## 5. It is requested that non-binding fixes and modifications be contributed
+##    back to Terrapin Communications, Inc.
 ##
-## Except where noted otherwise, rancid was written by and is maintained by
-## Henry Kilmer, John Heasley, Andrew Partan, Pete Whiting, and Austin Schutz.
-##
-# 2013-01-05 - instead of set set cli pager off, send return to get prompt
-#				cli pager moved to panrancid after scripting-mode - doug
+## THIS SOFTWARE IS PROVIDED BY Terrapin Communications, INC. AND CONTRIBUTORS
+## ``AS IS'' AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED
+## TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR
+## PURPOSE ARE DISCLAIMED.  IN NO EVENT SHALL THE COMPANY OR CONTRIBUTORS
+## BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR
+## CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF
+## SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS
+## INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN
+## CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE)
+## ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
+## POSSIBILITY OF SUCH DAMAGE.
 #
 # The login expect scripts were based on Erik Sherk's gwtn, by permission.
 #
-# alogin - Alteon WebOS switch login
+# panlogin - Palo Alto Networks login (based on alogin)
 #
-# afort@choqolat.org is responsible for this original mess
-# (andrew fort)
+# 2013-01-05 - instead of set set cli pager off, send return to get prompt
+#		cli pager moved to panrancid after scripting-mode - doug
+#
 # hughesd@deshawresearch.com is responsible for the current mess (copiously
 # cribbed)
 #
 
 # Usage line
-set usage "Usage: $argv0 \[-c command\] \
-\[-Evar=x\] \[-f cloginrc-file\] \
-\[-s script-file\] \[-t timeout\] \[-u username\] \
-\[-v vty-password\] \[-x command-file\] \
-\[-y ssh_cypher_type\] router \[router...\]\n"
+set usage "Usage: $argv0 \[-dSV\] \[-c command\] \[-Evar=x\] \
+\[-f cloginrc-file\] \[-p user-password\] \[-r passphrase\] \[-s script-file\] \
+\[-u username\] \[-t timeout\] \[-x command-file\] \[-y ssh_cypher_type\] \
+router \[router...\]\n"
 
 # env(CLOGIN) may contain:
 #	x == do not set xterm banner or name
@@ -55,6 +73,8 @@ set avautoenable 1
 # The default is to look in the password file to find the passwords.  This
 # tracks if we receive them on the command line.
 set do_passwd 1
+# Sometimes routers take awhile to answer (the default is 10 sec)
+set timeoutdflt 120
 
 # Find the user in the ENV, or use the unix userid.
 if {[ info exists env(CISCO_USER) ]} {
@@ -85,53 +105,52 @@ for {set i 0} {$i < $argc} {incr i} {
     set arg [lindex $argv $i]
 
     switch  -glob -- $arg {
-	# Username
-	-u* -
-	-U* {
-	    if {! [  regexp .\[uU\](.+) $arg ignore user]} {
-		incr i
-		set username [ lindex $argv $i ]
-	    }
-	# VTY Password
-	} -v* {
-	    if {! [  regexp .\[vV\](.+) $arg ignore passwd]} {
-		incr i
-		set passwd [ lindex $argv $i ]
-	    }
-	    set do_passwd 0
-	# Version string
-	} -V* {
-	    send_user "rancid 2.3.2a7\n"
-	    exit 0
-	# Enable Username
-	} -w* -
-	-W* {
-	# ignore -w
-	# Environment variable to pass to -s scripts
-	} -E*
-	{
-	    if {[ regexp .\[E\](.+)=(.+) $arg ignore varname varvalue]} {
-		incr i
-		set E$varname $varvalue
-	    } else {
-		send_user "\nError: invalid format for -E in $arg\n"
-		exit 1
-	    }
-	# Enable Password
-	} -e*
-	{
-	# ignore -e
 	# Command to run.
-	} -c* -
-	-C* {
+	-c* {
 	    if {! [  regexp .\[cC\](.+) $arg ignore command]} {
 		incr i
 		set command [ lindex $argv $i ]
 	    }
 	    set do_command 1
+	# Expect debug mode
+	} -d* {
+	    exp_internal 1
+	# Environment variable to pass to -s scripts
+	} -E* {
+	    if {[ regexp .\[E\](.+)=(.+) $arg ignore varname varvalue]} {
+		set E$varname $varvalue
+	    } else {
+		send_user "\nError: invalid format for -E in $arg\n"
+		exit 1
+	    }
+	# alternate cloginrc file
+	} -f* {
+	    if {! [ regexp .\[fF\](.+) $arg ignore password_file]} {
+		incr i
+		set password_file [ lindex $argv $i ]
+	    }
+	# user Password
+	} -p* {
+	    if {! [  regexp .\[pP\](.+) $arg ignore userpasswd]} {
+		incr i
+		set userpasswd [ lindex $argv $i ]
+	    }
+	    set do_passwd 0
+	# ssh passphrase
+	} -r* {
+	    if {! [  regexp .\[rR\](.+) $arg ignore passphrase]} {
+		incr i
+		set avpassphrase [ lindex $argv $i ]
+	    }
+	# VTY Password
+	} -v* {
+	    # ignore -v
+	# Version string
+	} -V* {
+	    send_user "@PACKAGE@ @VERSION@\n"
+	    exit 0
 	# Expect script to run.
-	} -s* -
-	-S* {
+	} -s* {
 	    if {! [  regexp .\[sS\](.+) $arg ignore sfile]} {
 		incr i
 		set sfile [ lindex $argv $i ]
@@ -141,30 +160,23 @@ for {set i 0} {$i < $argc} {incr i} {
 		exit 1
 	    }
 	    set do_script 1
-	# 'ssh -c' cypher type
-	} -y* -
-	-Y* {
-	    if {! [  regexp .\[eE\](.+) $arg ignore cypher]} {
-		incr i
-		set cypher [ lindex $argv $i ]
-	    }
-	# alternate cloginrc file
-	} -f* -
-	-F* {
-	    if {! [ regexp .\[fF\](.+) $arg ignore password_file]} {
-		incr i
-		set password_file [ lindex $argv $i ]
-	    }
+	# save config on exit
+	} -S* {
+	    set do_saveconfig 1
 	# Timeout
-	} -t* -
-	-T* {
+	} -t* {
 	    if {! [ regexp .\[tT\](.+) $arg ignore timeout]} {
 		incr i
-	        set timeout [ lindex $argv $i ]
+		set timeoutdflt [ lindex $argv $i ]
 	    }
-	# Command file
-	} -x* -
-	-X {
+	# Username
+	} -u* {
+	    if {! [  regexp .\[uU\](.+) $arg ignore user]} {
+		incr i
+		set username [ lindex $argv $i ]
+	    }
+	# command file
+	} -x* {
 	    if {! [  regexp .\[xX\](.+) $arg ignore cmd_file]} {
 		incr i
 		set cmd_file [ lindex $argv $i ]
@@ -173,16 +185,16 @@ for {set i 0} {$i < $argc} {incr i} {
 		send_user "\nError: $reason\n"
 		exit 1
 	    }
-	    set cmd_text [read $cmd_fd]
-	    close $cmd_fd
-	    set command [join [split $cmd_text \n] \;]
-	    set do_command 1
-	# Do we enable?
-	} -noenable {
-	    # ignore -noenable
-	# Does tacacs automatically enable us?
-	} -autoenable {
-	    # ignore -autoenable
+            set cmd_text [read $cmd_fd]
+            close $cmd_fd
+            set command [join [split $cmd_text \n] \;]
+            set do_command 1
+	# 'ssh -c' cypher type
+	} -y* {
+	    if {! [  regexp .\[yY\](.+) $arg ignore cypher]} {
+		incr i
+		set cypher [ lindex $argv $i ]
+	    }
 	} -* {
 	    send_user "\nError: Unknown argument! $arg\n"
 	    send_user $usage
@@ -221,14 +233,14 @@ proc label { host } {
 	if [regexp \^(xterm|vs) $env(TERM) ignore ] {
 	    send_user "\033]1;[lindex [split $host "."] 0]\a"
 	    send_user "\033]2;$host\a"
-	}
+        }
     }
 }
 
 # This is a helper function to make the password file easier to
 # maintain.  Using this the password file has the form:
-# add password sl*	pete cow
-# add password at*	steve
+# add password sl* 	pete cow
+# add password at* 	steve
 # add password *	hanky-pie
 proc add {var args} { global int_$var ; lappend int_$var $args}
 proc include {args} {
@@ -241,15 +253,15 @@ proc include {args} {
 }
 
 proc find {var router} {
-    upvar int_$var list
-    if { [info exists list] } {
-	foreach line $list {
-	    if { [string match [lindex $line 0] $router ] } {
-		return [lrange $line 1 end]
-	    }
-	}
+  upvar int_$var list
+  if { [info exists list] } {
+    foreach line $list {
+      if { [string match -nocase [lindex $line 0] $router ] } {
+	return [lrange $line 1 end]
+      }
     }
-    return {}
+  }
+  return {}
 }
 
 # Loads the password file.  Note that as this file is tcl, and that
@@ -276,7 +288,7 @@ proc source_password_file { password_file } {
 
 # Log into the router.
 # returns: 0 on success, 1 on failure, -1 if rsh was used successfully
-proc login { router user userpswd passwd cmethod cyphertype } {
+proc login { router user userpswd passwd cmethod cyphertype identfile } {
     global spawn_id in_proc do_command do_script platform
     global prompt u_prompt p_prompt e_prompt sshcmd
     set in_proc 1
@@ -298,13 +310,18 @@ proc login { router user userpswd passwd cmethod cyphertype } {
 		return 1
 	    }
 	} elseif [string match "ssh*" $prog] {
+	    # ssh to the router & try to login with or without an identfile.
+	    # We use two calls to spawn since spawn does not seem to parse
+	    # spaces correctly.
 	    regexp {ssh(:([^[:space:]]+))*} $prog command suffix port
-	    if {"$port" == ""} {
-		set retval [ catch {spawn $sshcmd -c $cyphertype -x -l $user $router} reason ]
-
-	    } else {
-		set retval [ catch {spawn $sshcmd -c $cyphertype -x -l $user -p $port $router} reason ]
+	    set cmd $sshcmd
+	    if {"$port" != ""} {
+		set cmd "$cmd -p $port"
 	    }
+	    if {"$identfile" != ""} {
+		set cmd "$cmd -i $identfile"
+	    }
+	    set retval [ catch {eval spawn [split "$cmd -c $cyphertype -x -l $user $router" { }]} reason ]
 	    if { $retval } {
 		send_user "\nError: $sshcmd failed: $reason\n"
 		return 1
@@ -614,6 +631,9 @@ foreach router [lrange $argv $i end] {
 	set p_prompt [join [lindex $p_prompt 0] ""]
     }
 
+    # Figure out identity file to use
+    set identfile [join [lindex [find identity $router] 0] ""]
+
     # Figure out cypher type
     if {[info exists cypher]} {
       # command line cypher type
@@ -628,11 +648,11 @@ foreach router [lrange $argv $i end] {
     if { "$cmethod" == "" } { set cmethod {{telnet} {ssh}} }
 
     # Figure out the SSH executable name
-    set sshcmd [find sshcmd $router]
+    set sshcmd [join [lindex [find sshcmd $router] 0] ""]
     if { "$sshcmd" == "" } { set sshcmd {ssh} }
 
     # Login to the router
-    if {[login $router $ruser $userpswd $passwd $cmethod $cyphertype]} {
+    if {[login $router $ruser $userpswd $passwd $cmethod $cyphertype $identfile ]} {
 	continue
     }
 
