--- a/rancid/bin/Makefile.am
+++ b/rancid/bin/Makefile.am
@@ -17,7 +17,8 @@ bin_SCRIPTS = agmrancid alogin anlogin arancid arrancid \
 	control_rancid cssrancid dllogin elogin erancid f5rancid f10rancid \
 	flogin fnlogin fnrancid hlogin hrancid htlogin \
 	htrancid jerancid jlogin mrancid mrvlogin mtlogin mtrancid \
-	nlogin nrancid nslogin nsrancid prancid rancid rivlogin \
+	nlogin nrancid nslogin nsrancid panlogin panrancid \
+	rancid rancid rivlogin \
 	rivrancid rrancid slogin srancid tlogin trancid wlogin \
 	xilogin xirancid xrancid zrancid
 # XXX hack for the rancid to get pkglibdir, see corresponding XXX below
