--- a/man/Makefile.in
+++ b/man/Makefile.in
@@ -269,7 +269,8 @@ man_nogen_MANS = agmrancid.1 alogin.1 anlogin.1 anrancid.1 arancid.1 \
 		fnrancid.1 hlogin.1 hrancid.1 htlogin.1 \
 		htrancid.1 jerancid.1 jlogin.1 mrancid.1 \
 		mrvlogin.1 mtlogin.1 mtrancid.1 nlogin.1 \
-		nrancid.1 nslogin.1 nsrancid.1 nxrancid.1 par.1 prancid.1 \
+		nrancid.1 nslogin.1 nsrancid.1 nxrancid.1 \
+		panlogin.1 panrancid.1 par.1 prancid.1 \
 		rancid-cvs.1 rancid-run.1 rancid.1 \
 		rancid.types.base.5 rancid_intro.1 rivlogin.1 rivrancid.1 \
 		router.db.5 rrancid.1 slogin.1 srancid.1 tlogin.1 wlogin.1 \
