--- a/rancid/bin/control_rancid.in
+++ b/rancid/bin/control_rancid.in
@@ -355,6 +355,9 @@ for router in `cut -d\; -f1 ../routers.up` ; do
     if [ $RCSSYS = cvs ] ; then
 	cvs status $router | grep -i 'status: unknown' > /dev/null 2>&1
     else
+	if [ ! -e $router ] ; then
+	    touch $router
+	fi
 	svn status $router | grep '^?' > /dev/null 2>&1
     fi
     if [ $? -eq 0 ] ; then
